# CAOS_GeoScena

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  VERSION  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: README.md  aoi.md  contract.md
docs/methods/: height-ladder.md  meshing.md
docs/sources/: glo30.md  osm.md  overture.md  worldcover.md
src/geoscena/: __init__.py  aoi.py  build.py  bundle.py  cache.py  cli.py  provenance.py
src/geoscena/fetch/: __init__.py  admin.py  census.py  citymodel.py  dem.py  environment.py  ghsl.py  openbuildings.py  osm.py  overture.py  rastermod.py  sentinel2.py  worldcover.py
src/geoscena/fuse/: __init__.py  heights.py
src/geoscena/io/: __init__.py  gltf.py
src/geoscena/mesh/: __init__.py  extrude.py  population.py  roads.py  terrain.py
tests/: test_core.py
